--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -28,6 +28,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginBottom="76dp"
+        android:id="@+id/imageViewTwitter"
         android:background="@drawable/circular_background"
         android:padding="8dp"
         android:src="@drawable/twitter_icon"
@@ -58,6 +59,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/circular_background"
         android:padding="8dp"
+        android:id="@+id/imageViewFacebook"
         android:src="@drawable/facebook_icon"
         app:layout_constraintBottom_toTopOf="@+id/tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -176,22 +178,6 @@
         app:layout_constraintVertical_bias="0.903" />
 
     <TextView
-        android:id="@+id/tvp1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dm_sans_black"
-        android:paddingRight="12dp"
-        android:text="Sign In"
-        android:textColor="#000000"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.765"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.964" />
-
-    <TextView
         android:id="@+id/tvp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -202,7 +188,23 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.964" />
+
+    <TextView
+        android:id="@+id/tvp1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dm_sans_black"
+        android:paddingRight="12dp"
+        android:text="Sign In"
+        android:textColor="#000000"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.839"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
