--- a/app/src/main/res/layout/editsos.xml
+++ b/app/src/main/res/layout/editsos.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SOS MESSAGE"
+        android:text="SOS Message"
         android:textColor="@color/white"
         android:textSize="28sp"
         android:fontFamily="@font/dm_sans_black"
@@ -42,11 +42,12 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSaveSOSMessage"
-        android:layout_width="146dp"
-        android:layout_height="47dp"
+        android:layout_width="197dp"
+        android:layout_height="51dp"
         android:background="@drawable/button_background"
-        android:text="Save SOS Message"
         android:fontFamily="@font/dm_sans_black"
+        android:padding="12dp"
+        android:text="Save SOS Message"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
