--- a/app/src/main/res/layout/fence_item.xml
+++ b/app/src/main/res/layout/fence_item.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:id="@+id/fenceTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="309dp"
+        android:layout_height="66dp"
         android:layout_weight="1"
         android:text="Fence"
         android:textSize="18sp" />
