--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -2,111 +2,110 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/main3"
-    android:background="@drawable/background_menu"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_menu">
 
 
     <Button
         android:id="@+id/instructionButton"
-        android:layout_width="135dp"
-        android:layout_height="129dp"
+        android:layout_width="121dp"
+        android:layout_height="120dp"
         android:background="@drawable/transparent_btn"
         android:onClick="instructions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.128" />
+        app:layout_constraintVertical_bias="0.127" />
 
     <Button
         android:id="@+id/ContactButton"
-        android:layout_width="112dp"
-        android:layout_height="118dp"
+        android:layout_width="123dp"
+        android:layout_height="122dp"
         android:background="@drawable/transparent_btn"
         android:onClick="EmergencyContacts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintHorizontal_bias="0.881"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.126" />
 
-
     <Button
         android:id="@+id/imageViewGeoFencing"
-        android:layout_width="114dp"
-        android:layout_height="119dp"
+        android:layout_width="118dp"
+        android:layout_height="127dp"
         android:background="@drawable/transparent_btn"
         android:onClick="Geofencing"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.865"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.405" />
-
-    <Button
-        android:id="@+id/imageViewEditSos"
-        android:layout_width="107dp"
-        android:layout_height="112dp"
-        android:background="@drawable/transparent_btn"
-        android:onClick="Editsos"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintHorizontal_bias="0.863"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.401" />
 
     <Button
-        android:id="@+id/imageViewEmergencyService"
-        android:layout_width="109dp"
-        android:layout_height="117dp"
+        android:id="@+id/imageViewEditSos"
+        android:layout_width="118dp"
+        android:layout_height="125dp"
         android:background="@drawable/transparent_btn"
-        android:onClick="EmergencyServices"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.143"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.672" />
-
-
-    <Button
-        android:id="@+id/EmergencyLocationButton"
-        android:layout_width="116dp"
-        android:layout_height="117dp"
-        android:onClick="EmergencyLocation"
-        android:background="@drawable/transparent_btn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.856"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.672" />
-
-    <Button
-        android:id="@+id/imageViewFlashLight"
-        android:layout_width="111dp"
-        android:layout_height="119dp"
-        android:background="@drawable/transparent_btn"
-        android:onClick="toggleTorch"
+        android:onClick="Editsos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.942" />
+        app:layout_constraintVertical_bias="0.4" />
+
+
+    <Button
+        android:id="@+id/imageViewEmergencyService"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/transparent_btn"
+        android:onClick="EmergencyServices"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.676" />
+
+    <Button
+        android:id="@+id/EmergencyLocationButton"
+        android:layout_width="121dp"
+        android:layout_height="123dp"
+        android:background="@drawable/transparent_btn"
+        android:onClick="EmergencyLocation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.874"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.675" />
+
+    <Button
+        android:id="@+id/imageViewFlashLight"
+        android:layout_width="123dp"
+        android:layout_height="125dp"
+        android:background="@drawable/transparent_btn"
+        android:onClick="toggleTorch"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.951" />
 
     <Button
         android:id="@+id/MedicationsButton"
         android:layout_width="118dp"
         android:layout_height="119dp"
-        android:onClick="Medication"
         android:background="@drawable/transparent_btn"
+        android:onClick="Medication"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.88"
@@ -119,11 +118,14 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/imageViewFlashLight"
+        android:gravity="center"
+        android:fontFamily="@font/dm_sans_black"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewEmergencyService"
-        app:layout_constraintVertical_bias="0.58" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.78" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
