--- a/app/src/main/res/layout/popup_add_contact.xml
+++ b/app/src/main/res/layout/popup_add_contact.xml
@@ -7,6 +7,7 @@
 
     <TextView
         android:layout_width="wrap_content"
+        android:id="@+id/contactTitle"
         android:layout_height="wrap_content"
         android:text="Add Emergency Contact"
         android:fontFamily="@font/dm_sans_black"
